k8s-autonomia/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-node-service
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: api-node
